--- a/index.html
+++ b/index.html
@@ -422,28 +422,17 @@
 <nav>
 <ul>
 <li><a href="index.html">ホーム</a></li>
-<li><a href="info.html">施設のご案内</a></li>
+<li><a href="info.html">サイトのご案内</a></li>
 <li><a href="shopping.html">お買い物</a></li>
 <li><a href="event.html">イベント</a></li>
 <li><a href="access.html">アクセス</a></li>
+<li><a href="login.html">ログイン</a></li>
+<li><a href="register.html">新規登録</a></li>
 </ul>
 </nav>
 
 
-
-
-
-
-
-
-
-
-
-<p class="btn"><a href="contact.html">ホーム</a></p>
-
-<p class="btn"><a href="contact.html">新規登録</a></p>
-
-<p class="btn"><a href="contact.html">ログイン</a></p>　　
+　　
 
 <p class="btn"><a href="contact.html">お問い合わせ</a></p>
 
