--- a/info.html
+++ b/info.html
@@ -163,10 +163,12 @@
 <nav>
 <ul>
 <li><a href="index.html">ホーム</a></li>
-<li><a href="info.html">施設のご案内</a></li>
+<li><a href="info.html">サイトのご案内</a></li>
 <li><a href="shopping.html">お買い物</a></li>
 <li><a href="event.html">イベント</a></li>
 <li><a href="access.html">アクセス</a></li>
+<li><a href="login.html">ログイン</a></li>
+<li><a href="register.html">新規登録</a></li>
 </ul>
 </nav>
 
