--- a/tp_bussan2_bg_green/tp_bussan2_bg_green/index.html
+++ b/tp_bussan2_bg_green/tp_bussan2_bg_green/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>道の駅・物産館イメージ 無料ホームページテンプレート tp_bussan2</title>
+<title>kyodoryori-website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
+<meta name="description" content="各都道府県の郷土料理を紹介します">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -36,8 +36,9 @@
 
 <main>
 
+<h2 class="flag">日本各地の郷土料理</h2>
 <!--★始まり-->
-<table cellspacing="0" cellpadding="100" align="center" id="nihonchizu">
+<table cellspacing="0" cellpadding="200" align="center" id="nihonchizu">
 	<tr>
 	<td align="right">
 	
@@ -45,7 +46,7 @@
 	<tr height="40" style="font-size:10px;text-align:center;">
 	<td></td>
 	<td bgcolor="#1f88fe" width="50">
-	<a href="http://www.hokkaido-jin.jp/" target="_blank">北海道</a>
+	<a href="hokkaido.html" target="_blank">北海道</a>
 	</td>
 	</tr>
 	
@@ -129,7 +130,7 @@
 	<a href="http://www.pref.kyoto.jp/" target="_blank">京都</a>
 	</td>
 	<td bgcolor="#9f88fe" width="26">
-	<a href="http://www.pref.shiga.jp/" target="_blank">滋賀</a>
+	<a href="shiga.html" target="_blank">滋賀</a>
 	</td>
 	<td bgcolor="#7f88fe" width="30">
 	<a href="http://www.pref.fukui.jp/" target="_blank">福井</a>
@@ -244,28 +245,28 @@
 
 <section>
 
-<h2 class="flag">今月のイベント情報<span>Event</span></h2>
+<h2 class="flag">Pick Up<span>Event</span></h2>
 
 <div class="list-container">
 
 <div class="list blur">
-<figure><img src="images/sample1.jpg" alt=""></figure>
+<figure><img src="images/sample9.jpg" alt=""></figure>
 <div class="text">
-<h4>Sample Title</h4>
-<p>ここに説明を入れます。サンプルテキスト。</p>
+<h4>北海道</h4>
+<p>北海道は、大地の恵みを受けた、新鮮で美味しい食材が盛りだくさんです。まさに食の宝庫といえる北海道には、地元の食材を使った北海道ならではの郷土料理がたくさんあります。</p>
 </div>
-<p class="btn"><a href="event.html">詳しくみる</a></p>
+<p class="btn"><a href="hokkaido.html">詳しくみる</a></p>
 <span class="icon">12/15<br>〜<br>12/18</span>
 </div>
 
 <div class="list blur">
-<figure><img src="images/sample1.jpg" alt=""></figure>
+<figure><img src="images/sample10.jpg" alt=""></figure>
 <div class="text">
-<h4>Sample Title</h4>
-<p>ここに説明を入れます。サンプルテキスト。</p>
+<h4>滋賀県</h4>
+<p>滋賀県の郷土料理です．</p>
 </div>
-<p class="btn"><a href="event.html">詳しくみる</a></p>
-<span class="icon">12/3</span>
+<p class="btn"><a href="shiga.html">詳しくみる</a></p>
+<span class="icon">オススメ！</span>
 </div>
 
 <div class="list blur">
