九州地方のレシピページ作成 レシピページのレイアウト作成

--- a/tp_bussan2_bg_green/tp_bussan2_bg_green/index.html
+++ b/tp_bussan2_bg_green/tp_bussan2_bg_green/index.html
@@ -27,10 +27,10 @@
 
 <nav id="header-menu">
 <ul>
-<li><a href="info.html">施設のご案内<i class="fas fa-info-circle"></i></a></li>
-<li><a href="shopping.html">お買い物<i class="fas fa-shopping-basket"></i></a></li>
-<li><a href="event.html">イベント<i class="far fa-calendar-alt"></i></a></li>
-<li><a href="access.html">アクセス<i class="fas fa-map-marker-alt"></i></a></li>
+<li><a href="info.html">マイページ<i class="fas fa-info-circle"></i></a></li>
+<li><a href="shopping.html">お気に入りレシピ<i class="fas fa-shopping-basket"></i></a></li>
+<li><a href="index.html">ホーム<i class="far fa-calendar-alt"></i></a></li>
+<li><a href="access.html">問い合わせ<i class="fas fa-map-marker-alt"></i></a></li>
 </ul>
 </nav>
 
@@ -105,13 +105,13 @@
 	<table cellspacing="1" cellpadding="0" style="font-size:10px;text-align:center;border-style:none;">
 	<tr height="25">
 	<td bgcolor="#ff88fe" width="26">
-	<a href="http://www.pref.nagasaki.jp/" target="_blank">長崎</a>
+	<a href="nagasaki.html" target="_blank">長崎</a>
 	</td>
 	<td bgcolor="#ff88fe" width="26">
-	<a href="http://www.pref.saga.jp/" target="_blank">佐賀</a>
+	<a href="saga.html" target="_blank">佐賀</a>
 	</td>
 	<td bgcolor="#df88fe" width="26">
-	<a href="http://www.pref.fukuoka.jp/" target="_blank">福岡</a>
+	<a href="fukuoka.html" target="_blank">福岡</a>
 	</td>
 	<td width="10"></td>
 	<td bgcolor="#df88fe" width="26" rowspan="2">
@@ -153,10 +153,10 @@
 	<tr height="25">
 	<td></td>
 	<td bgcolor="#ff88fe">
-	<a href="http://www.pref.kumamoto.jp/" target="_blank">熊本</a>
+	<a href="kumamoto.html" target="_blank">熊本</a>
 	</td>
 	<td bgcolor="#df88fe">
-	<a href="http://www.pref.oita.jp/" target="_blank">大分</a>
+	<a href="oita.html" target="_blank">大分</a>
 	</td>
 	<td></td>
 	<td bgcolor="#df88fe">
@@ -188,10 +188,10 @@
 	<tr height="24">
 	<td></td>
 	<td bgcolor="#ff88fe">
-	<a href="http://www.pref.kagoshima.jp/" target="_blank">鹿児島</a>
+	<a href="kagoshima.html" target="_blank">鹿児島</a>
 	</td>
 	<td bgcolor="#ff88fe">
-	<a href="http://www.pref.miyazaki.jp/" target="_blank">宮崎</a>
+	<a href="miyazaki.html" target="_blank">宮崎</a>
 	</td>
 	<td></td><td></td><td></td><td></td><td></td>
 	<td bgcolor="#bf88fe">
@@ -224,7 +224,7 @@
 	</td>
 	</tr><tr height="20">
 	<td bgcolor="#ff88fe">
-	<a href="http://www.pref.okinawa.jp/index-j.html" target="_blank">沖縄</a>
+	<a href="okinawa.html" target="_blank">沖縄</a>
 	</td>
 	<td></td><td></td><td></td><td></td>
 	<td bgcolor="#df88fe">
@@ -256,7 +256,7 @@
 <p>北海道は、大地の恵みを受けた、新鮮で美味しい食材が盛りだくさんです。まさに食の宝庫といえる北海道には、地元の食材を使った北海道ならではの郷土料理がたくさんあります。</p>
 </div>
 <p class="btn"><a href="hokkaido.html">詳しくみる</a></p>
-<span class="icon">12/15<br>〜<br>12/18</span>
+<span class="icon">オススメ！</span>
 </div>
 
 <div class="list blur">
@@ -314,32 +314,32 @@
 
 <section class="bg1">
 
-<h2 class="cracker">今月のおすすめ商品<span>Shopping</span></h2>
+<h2 class="cracker">日本各地の郷土料理<span>～郷土料理を未来につなげよう～</span></h2>
 
 <div class="list-container">
 
 <div class="list-square blur">
-<figure><img src="images/sample6.jpg" alt=""></figure>
+<figure><img src="images/sample13.jpg" alt=""></figure>
 <div class="text">
-<h4>Sample Title</h4>
-<p>ここに説明を入れます。サンプルテキスト。</p>
+<h4>九州ブロック～福岡県～がめ煮～</h4>
+<p>鶏肉を里芋、ごぼう、にんじん、たけのこなどと一緒に煮込んだ料理。別名筑前煮</p>
 </div>
 <span class="icon">おすすめ</span>
 </div>
 
 <div class="list-square blur">
-<figure><img src="images/sample7.jpg" alt=""></figure>
+<figure><img src="images/sample14.jpg" alt=""></figure>
 <div class="text">
-<h4>Sample Title</h4>
-<p>ここに説明を入れます。サンプルテキスト。</p>
+<h4>近畿ブロック～三重県～たこめし～</h4>
+<p>とれたてのタコで作る、島のたきこみご飯。瀬戸内海周辺の海岸地域発信の名物料理となり、駅弁としても人気</p>
 </div>
 </div>
 
 <div class="list-square blur">
-<figure><img src="images/sample8.jpg" alt=""></figure>
+<figure><img src="images/sample15.jpg" alt=""></figure>
 <div class="text">
-<h4>Sample Title</h4>
-<p>ここに説明を入れます。サンプルテキスト。</p>
+<h4>東北ブロック～山形県～いも煮～</h4>
+<p>里芋やこんにゃく、ねぎ、きのこ類、季節の野菜などを主な具材とした鍋料理。</p>
 </div>
 </div>
 
