岡山，島根，鳥取のレシピ追加

--- a/tp_bussan2_bg_green/tp_bussan2_bg_green/okayama.html
+++ b/tp_bussan2_bg_green/tp_bussan2_bg_green/okayama.html
@@ -40,51 +40,53 @@
 
       <main>
         <section>
-          <h2 class="flag">鳥取県<span>Recipe</span></h2>
-          <h2>いただき</h2>
+          <h2 class="flag">岡山県<span>Recipe</span></h2>
+          <h2>デミかつ丼</h2>
 
           <p class="dai">
-            材料（4人前）<br />
+            材料（1人前）<br />
           </p>
           <p class="c">
-            米　2合<br />三角の油揚げ（大）　4枚<br />人参　50g<br />ごぼう　50g<br />
-            干ししいたけ　3枚<br />Aしいたけの戻し汁　800ml<br />A醤油　大さじ4<br />A砂糖　大さじ2<br />A酒　大さじ1<br />
+            豚ロース　1枚<br />米　1合<br />キャベツ　30g<br />塩　少々<br />
+            胡椒　少々<br />小麦粉　適量<br />パン粉　適量<br />卵　1個<br />A赤ワイン　大さじ3<br />
+            Aケチャップ　大さじ3<br />A中濃ソース　大さじ3<br />A砂糖　小さじ1<br />A醤油　小さじ１
           </p>
           <p class="dai">
             作り方<br />
           </p>
           <p class="c">
-            （１）	三角の油揚げに切れ込みを入れ袋にする。<br />
-            （２）	ごぼうはささがきにして水にはなし、アク抜きをする。人参は細切りにする。干ししいたけは浸けてもどし、細かく切る。<br />
-            （３）	（２）と米を混ぜ合わせ、油揚げに詰めて、爪楊枝で口を縫うようにして留める。<br />
-            （４）	炊飯器に（３）、Aを入れて炊き上げる。<br />
-            （５）	爪楊枝を外して完成。<br />
+            （１）	米を炊く。<br />
+            （２）	キャベツを千切りにする。<br />
+            （３）	豚ロースの筋を切り、塩と胡椒で味付けをする。<br />
+            （４）	（３）を小麦粉、溶き卵、パン粉の順につけ、油で揚げる。<br />
+            （５）	Aを混ぜ合わせ中火で温め、ソースを作る。<br />
+            （６）	炊きあがったご飯にキャベツ、切った（４）をのせソースをかけて完成。<br />
             </a>
           </p>
 
           <div class="list-container">
             
             <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/okayama1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                  <h4>デミかつ丼</h4>
+                  <p>岡山県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/okayama1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                    <h4>デミかつ丼</h4>
+                    <p>岡山県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/okayama1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                    <h4>デミかつ丼</h4>
+                    <p>岡山県の郷土料理です．</p>
                 </div>
               </div>
   
@@ -92,8 +94,8 @@
           </div>
 
           <p class="u">
-            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/itadaki_tottori.html">
-              出典:「いただき 鳥取県」(農林水産省)(2023年1月14日に利用)</a><br />
+            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/41_20_okayama.html">
+              出典:「デミかつ丼 岡山県」(農林水産省)(2023年1月14日に利用)</a><br />
           </p>
 
           <!--/.list-container-->
