--- a/tp_bussan2_bg_green/tp_bussan2_bg_green/shimane.html
+++ b/tp_bussan2_bg_green/tp_bussan2_bg_green/shimane.html
@@ -40,51 +40,50 @@
 
       <main>
         <section>
-          <h2 class="flag">鳥取県<span>Recipe</span></h2>
-          <h2>いただき</h2>
+          <h2 class="flag">島根県<span>Recipe</span></h2>
+          <h2>干し大根の煮しめ</h2>
 
           <p class="dai">
             材料（4人前）<br />
           </p>
           <p class="c">
-            米　2合<br />三角の油揚げ（大）　4枚<br />人参　50g<br />ごぼう　50g<br />
-            干ししいたけ　3枚<br />Aしいたけの戻し汁　800ml<br />A醤油　大さじ4<br />A砂糖　大さじ2<br />A酒　大さじ1<br />
+            干し大根　20枚<br />戻し汁　適量<br />いりこ　30g<br />酒　大さじ2<br />
+            砂糖　大さじ1<br />醤油　大さじ2<br />油　適量<br />
           </p>
           <p class="dai">
             作り方<br />
           </p>
           <p class="c">
-            （１）	三角の油揚げに切れ込みを入れ袋にする。<br />
-            （２）	ごぼうはささがきにして水にはなし、アク抜きをする。人参は細切りにする。干ししいたけは浸けてもどし、細かく切る。<br />
-            （３）	（２）と米を混ぜ合わせ、油揚げに詰めて、爪楊枝で口を縫うようにして留める。<br />
-            （４）	炊飯器に（３）、Aを入れて炊き上げる。<br />
-            （５）	爪楊枝を外して完成。<br />
+            （１）	干し大根を洗い、水につけておく。<br />
+            （２）	鍋に水と（１）を入れて火にかける。沸騰したら火を止め、そのまま冷やす。<br />
+            （３）	（２）を油で炒めて戻し汁、いりこ、酒とともに中火で煮る。<br />
+            （４）	砂糖、醤油を加えて煮汁がなくなるまで煮込む。<br />
             </a>
           </p>
 
           <div class="list-container">
             
             <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/shimane1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                  <h4>干し大根の煮しめ</h4>
+                  <p>島根県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/shimane1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                    <h4>干し大根の煮しめ</h4>
+                    <p>島根県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/shimane1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                    <h4>干し大根の煮しめ</h4>
+                    <p>島根県の郷土料理です．</p>
                 </div>
               </div>
   
@@ -92,8 +91,8 @@
           </div>
 
           <p class="u">
-            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/itadaki_tottori.html">
-              出典:「いただき 鳥取県」(農林水産省)(2023年1月14日に利用)</a><br />
+            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/hoshidaikonnonishime_shimane.html">
+              出典:「干し大根の煮しめ 鳥取県」(農林水産省)(2023年1月14日に利用)</a><br />
           </p>
 
           <!--/.list-container-->
