写真の追加

--- a/tp_bussan2_bg_green/tp_bussan2_bg_green/index.html
+++ b/tp_bussan2_bg_green/tp_bussan2_bg_green/index.html
@@ -29,7 +29,7 @@
 <ul>
 <li><a href="info.html">マイページ<i class="fas fa-info-circle"></i></a></li>
 <li><a href="shopping.html">お気に入りレシピ<i class="fas fa-shopping-basket"></i></a></li>
-<li><a href="index.html">ホーム<i class="far fa-calendar-alt"></i></a></li>
+<li><a href="event.html">ホーム<i class="far fa-calendar-alt"></i></a></li>
 <li><a href="access.html">問い合わせ<i class="fas fa-map-marker-alt"></i></a></li>
 </ul>
 </nav>
@@ -118,10 +118,10 @@
 	<a href="http://www.pref.yamaguchi.jp/" target="_blank">山口</a>
 	</td>
 	<td bgcolor="#df88fe" width="26">
-	<a href="http://www.pref.shimane.jp/" target="_blank">島根</a>
+	<a href="shimane.html" target="_blank">島根</a>
 	</td>
 	<td bgcolor="#bf88fe" width="26">
-	<a href="http://www.pref.tottori.jp/" target="_blank">鳥取</a>
+	<a href="tottori.html" target="_blank">鳥取</a>
 	</td>
 	<td bgcolor="#bf88fe" width="26" rowspan="2">
 	<a href="http://web.pref.hyogo.jp/" target="_blank">兵庫</a>
@@ -163,7 +163,7 @@
 	<a href="http://www.pref.hiroshima.jp/" target="_blank">広島</a>
 	</td>
 	<td bgcolor="#bf88fe">
-	<a href="http://www.pref.okayama.jp/" target="_blank">岡山</a>
+	<a href="okayama.html" target="_blank">岡山</a>
 	</td>
 	<td bgcolor="#bf88fe">
 	<a href="http://www.pref.osaka.jp/" target="_blank">大阪</a>
@@ -256,7 +256,7 @@
 <p>北海道は、大地の恵みを受けた、新鮮で美味しい食材が盛りだくさんです。まさに食の宝庫といえる北海道には、地元の食材を使った北海道ならではの郷土料理がたくさんあります。</p>
 </div>
 <p class="btn"><a href="hokkaido.html">詳しくみる</a></p>
-<span class="icon">オススメ！</span>
+<span class="icon">12/15<br>〜<br>12/18</span>
 </div>
 
 <div class="list blur">
@@ -314,32 +314,32 @@
 
 <section class="bg1">
 
-<h2 class="cracker">日本各地の郷土料理<span>～郷土料理を未来につなげよう～</span></h2>
+<h2 class="cracker">今月のおすすめ商品<span>Shopping</span></h2>
 
 <div class="list-container">
 
 <div class="list-square blur">
-<figure><img src="images/sample13.jpg" alt=""></figure>
+<figure><img src="images/sample6.jpg" alt=""></figure>
 <div class="text">
-<h4>九州ブロック～福岡県～がめ煮～</h4>
-<p>鶏肉を里芋、ごぼう、にんじん、たけのこなどと一緒に煮込んだ料理。別名筑前煮</p>
+<h4>Sample Title</h4>
+<p>ここに説明を入れます。サンプルテキスト。</p>
 </div>
 <span class="icon">おすすめ</span>
 </div>
 
 <div class="list-square blur">
-<figure><img src="images/sample14.jpg" alt=""></figure>
+<figure><img src="images/sample7.jpg" alt=""></figure>
 <div class="text">
-<h4>近畿ブロック～三重県～たこめし～</h4>
-<p>とれたてのタコで作る、島のたきこみご飯。瀬戸内海周辺の海岸地域発信の名物料理となり、駅弁としても人気</p>
+<h4>Sample Title</h4>
+<p>ここに説明を入れます。サンプルテキスト。</p>
 </div>
 </div>
 
 <div class="list-square blur">
-<figure><img src="images/sample15.jpg" alt=""></figure>
+<figure><img src="images/sample8.jpg" alt=""></figure>
 <div class="text">
-<h4>東北ブロック～山形県～いも煮～</h4>
-<p>里芋やこんにゃく、ねぎ、きのこ類、季節の野菜などを主な具材とした鍋料理。</p>
+<h4>Sample Title</h4>
+<p>ここに説明を入れます。サンプルテキスト。</p>
 </div>
 </div>
 
@@ -352,26 +352,11 @@
 
 <section>
 
-<h2>テンプレートのご利用前に必ずお読み下さい<span>Read Me</span></h2>
 
-<h3>利用規約のご案内</h3>
-<p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『道の駅・物産館イメージ 無料ホームページテンプレート tp_bussan2』です。必ずダウンロード先のサイトの<a href="https://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
-<p><strong class="color-check">HP最下部の著作表示『Web Design:Template-Party』は無断で削除しないで下さい。</strong><br>
-わざと見えなく加工する事も禁止です。</p>
-<p><strong class="color-check">下部の著作を外したい場合は</strong><br>
-<a href="https://template-party.com/">Template-Party</a>の<a href="https://template-party.com/member.html">ライセンス契約</a>を行う事でHP下部の著作を外す事ができます。</p>
 
-<h3>当テンプレートの詳しい使い方は</h3>
-<p><a href="company.html#about">こちらをご覧下さい。</a></p>
+<!--お気に入り機能-->
 
-<h3>トップページのスライドショー画像について</h3>
-<p>トップページのスライドショー写真は、配布元サイト（写真ACさん）の規約により梱包できませんが、配布元サイト(<a href="https://www.photo-ac.com/#a_aid=60e590da89d1f&amp;a_bid=35660fdf" target="_blank">写真AC</a><img style="border:0" src="https://acworks.postaffiliatepro.com/scripts/g5iueh?a_aid=60e590da89d1f&amp;a_bid=35660fdf" width="1" height="1" alt="" />)さんから無料ダウンロードができます。<br>
-ご利用の際はACさんの規約を読んだ上で直接ダウンロードして下さい。</p>
-<ul>
-<li><a href="https://www.photo-ac.com/main/detail/24729031#a_aid=60e590da89d1f&amp;a_bid=35660fdf" target="_blank">1.jpgのダウンロード（※リンク先はACさんです）</a><img style="border:0" src="https://acworks.postaffiliatepro.com/scripts/g5iueh?a_aid=60e590da89d1f&amp;a_bid=35660fdf" width="1" height="1" alt="" /></li>
-<li><a href="https://www.photo-ac.com/main/detail/24630677#a_aid=60e590da89d1f&amp;a_bid=35660fdf" target="_blank">2.jpgのダウンロード（※リンク先はACさんです）</a><img style="border:0" src="https://acworks.postaffiliatepro.com/scripts/g5iueh?a_aid=60e590da89d1f&amp;a_bid=35660fdf" width="1" height="1" alt="" /></li>
-<li><a href="https://www.photo-ac.com/main/detail/25033810#a_aid=60e590da89d1f&amp;a_bid=35660fdf" target="_blank">3.jpgのダウンロード（※リンク先はACさんです）</a><img style="border:0" src="https://acworks.postaffiliatepro.com/scripts/g5iueh?a_aid=60e590da89d1f&amp;a_bid=35660fdf" width="1" height="1" alt="" /></li>
-</ul>
+
 
 </section>
 
@@ -422,14 +407,36 @@
 <nav>
 <ul>
 <li><a href="index.html">ホーム</a></li>
-<li><a href="info.html">施設のご案内</a></li>
+<li><a href="info.html">サイトのご案内</a></li>
 <li><a href="shopping.html">お買い物</a></li>
 <li><a href="event.html">イベント</a></li>
 <li><a href="access.html">アクセス</a></li>
+<li><a href="login.html">ログイン</a></li>
+<li><a href="register.html">新規登録</a></li>
 </ul>
 </nav>
 
+
+　　
+
 <p class="btn"><a href="contact.html">お問い合わせ</a></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="sh">
 <p>※900px未満のメニュー開閉時にのみ表示させたい情報があればここ（shボックスの中）に入れて下さい。<br>
