--- a/tp_bussan2_bg_green/tp_bussan2_bg_green/company.html
+++ b/tp_bussan2_bg_green/tp_bussan2_bg_green/company.html
@@ -254,10 +254,12 @@ cssフォルダのinview.cssの<span class="look">.crackerstyle img</span>の設
 <li class="title">メニュー</li>
 <li><a href="index.html">ホーム</a></li>
 <li><a href="company.html">運営会社</a></li>
-<li><a href="info.html">施設のご案内</a></li>
+<li><a href="info.html">サイトのご案内</a></li>
 <li><a href="shopping.html">お買い物</a></li>
 <li><a href="event.html">イベント</a></li>
 <li><a href="access.html">アクセス</a></li>
+<li><a href="login.html">ログイン</a></li>
+<li><a href="register.html">新規登録</a></li>
 </ul>
 <ul>
 <li class="title">メニュー見出し</li>
