近畿(一部)追加

--- a/tp_bussan2_bg_green/ehime.html
+++ b/tp_bussan2_bg_green/ehime.html
@@ -40,50 +40,49 @@
 
       <main>
         <section>
-          <h2 class="flag">島根県<span>Recipe</span></h2>
-          <h2>干し大根の煮しめ</h2>
+          <h2 class="flag">愛媛県<span>Recipe</span></h2>
+          <h2>せんざんき</h2>
 
           <p class="dai">
             材料（4人前）<br />
           </p>
           <p class="c">
-            干し大根　20枚<br />戻し汁　適量<br />いりこ　30g<br />酒　大さじ2<br />
-            砂糖　大さじ1<br />醤油　大さじ2<br />油　適量<br />
+            骨付き鶏肉　600g<br />A薄口醤油　大さじ1と1/2<br />A酒　大さじ２<br />A砂糖　大さじ１<br />
+            Aしょうが汁　少々<br />Aこしょう　少々<br />Aすりおろしにんにく　少々<br />片栗粉　適量<br />
           </p>
           <p class="dai">
             作り方<br />
           </p>
           <p class="c">
-            （１）	干し大根を洗い、水につけておく。<br />
-            （２）	鍋に水と（１）を入れて火にかける。沸騰したら火を止め、そのまま冷やす。<br />
-            （３）	（２）を油で炒めて戻し汁、いりこ、酒とともに中火で煮る。<br />
-            （４）	砂糖、醤油を加えて煮汁がなくなるまで煮込む。<br />
+            （１）	鶏肉を一口大に切る。<br />
+            （２）	Aをまぜ合わせ、（１）を漬け込む。<br />
+            （３）	（２）に片栗粉をつけ、油で揚げる。<br />
             </a>
           </p>
 
           <div class="list-container">
             
             <div class="list-square blur">
-                <figure><img src="images/shimane1.jpg" alt="" /></figure>
+                <figure><img src="images/ehime1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>干し大根の煮しめ</h4>
-                  <p>島根県の郷土料理です．</p>
+                  <h4>せんざんき</h4>
+                  <p>愛媛県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/shimane1.jpg" alt="" /></figure>
+                <figure><img src="images/ehime1.jpg" alt="" /></figure>
                 <div class="text">
-                    <h4>干し大根の煮しめ</h4>
-                    <p>島根県の郷土料理です．</p>
+                    <h4>せんざんき</h4>
+                    <p>愛媛県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/shimane1.jpg" alt="" /></figure>
+                <figure><img src="images/ehime1.jpg" alt="" /></figure>
                 <div class="text">
-                    <h4>干し大根の煮しめ</h4>
-                    <p>島根県の郷土料理です．</p>
+                    <h4>せんざんき</h4>
+                    <p>愛媛県の郷土料理です．</p>
                 </div>
               </div>
   
@@ -91,8 +90,8 @@
           </div>
 
           <p class="u">
-            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/hoshidaikonnonishime_shimane.html">
-              出典:「干し大根の煮しめ 鳥取県」(農林水産省)(2023年1月14日に利用)</a><br />
+            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/senzanki_ehime.html">
+              出典:「せんざんき 愛媛県」(農林水産省)(2023年1月14日に利用)</a><br />
           </p>
 
           <!--/.list-container-->
