--- a/tp_bussan2_bg_green/index.html
+++ b/tp_bussan2_bg_green/index.html
@@ -118,7 +118,7 @@
 	<a href="http://www.pref.yamaguchi.jp/" target="_blank">山口</a>
 	</td>
 	<td bgcolor="#df88fe" width="26">
-	<a href="shimane.html" target="_blank">島根</a>
+	<a href="http://www.pref.shimane.jp/" target="_blank">島根</a>
 	</td>
 	<td bgcolor="#bf88fe" width="26">
 	<a href="tottori.html" target="_blank">鳥取</a>
@@ -163,7 +163,7 @@
 	<a href="http://www.pref.hiroshima.jp/" target="_blank">広島</a>
 	</td>
 	<td bgcolor="#bf88fe">
-	<a href="okayama.html" target="_blank">岡山</a>
+	<a href="http://www.pref.okayama.jp/" target="_blank">岡山</a>
 	</td>
 	<td bgcolor="#bf88fe">
 	<a href="http://www.pref.osaka.jp/" target="_blank">大阪</a>
