--- a/tp_bussan2_bg_green/tottori.html
+++ b/tp_bussan2_bg_green/tottori.html
@@ -40,53 +40,53 @@
 
       <main>
         <section>
-          <h2 class="flag">岡山県<span>Recipe</span></h2>
-          <h2>デミかつ丼</h2>
+          <h2 class="flag">長崎県<span>Recipe</span></h2>
+          <h2>ひきとおし</h2>
 
           <p class="dai">
-            材料（1人前）<br />
+            材料（4人前）<br />
           </p>
           <p class="c">
-            豚ロース　1枚<br />米　1合<br />キャベツ　30g<br />塩　少々<br />
-            胡椒　少々<br />小麦粉　適量<br />パン粉　適量<br />卵　1個<br />A赤ワイン　大さじ3<br />
-            Aケチャップ　大さじ3<br />A中濃ソース　大さじ3<br />A砂糖　小さじ1<br />A醤油　小さじ１
+            地鶏　400g<br />豆腐　1丁<br />こんにゃく　1枚<br />白菜　1/2玉<br />
+            春菊　1/2束<br />ごぼう　1本<br />白ねぎ　1本<br />そうめん　4束<br />鶏がら　適量<br />
+            A：砂糖　大さじ２<br />A：しょうゆ　大さじ１<br />A：酒　大さじ1
           </p>
           <p class="dai">
             作り方<br />
           </p>
           <p class="c">
-            （１）	米を炊く。<br />
-            （２）	キャベツを千切りにする。<br />
-            （３）	豚ロースの筋を切り、塩と胡椒で味付けをする。<br />
-            （４）	（３）を小麦粉、溶き卵、パン粉の順につけ、油で揚げる。<br />
-            （５）	Aを混ぜ合わせ中火で温め、ソースを作る。<br />
-            （６）	炊きあがったご飯にキャベツ、切った（４）をのせソースをかけて完成。<br />
+            （１）	ごぼうはささがきにし、あくぬきをする。そぎ切りにした地鶏とごぼうを一緒に炒める。<br />
+            （２）	鶏ガラを鍋に入れ煮る。沸騰したら取り出して水で洗う。その後、水、酒とともに灰汁を取りつつ弱火で1時間煮る。<br />
+            （３）	鶏ガラを取り出し、地鶏を入れ柔らかくなるまで煮込む。<br />
+            （４）	他の具材を切る。こんにゃくは一口大に切る。<br />
+            （５）	地鶏がやわらかくなったらAを入れて味を調える。<br />
+            （６）	（４）をいれてひと煮立ちしたら完成。<br />
             </a>
           </p>
 
           <div class="list-container">
             
             <div class="list-square blur">
-                <figure><img src="images/okayama1.jpg" alt="" /></figure>
+                <figure><img src="images/nagasaki1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>デミかつ丼</h4>
-                  <p>岡山県の郷土料理です．</p>
+                  <h4>ひきとおし</h4>
+                  <p>長崎県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/okayama1.jpg" alt="" /></figure>
+                <figure><img src="images/nagasaki1.jpg" alt="" /></figure>
                 <div class="text">
-                    <h4>デミかつ丼</h4>
-                    <p>岡山県の郷土料理です．</p>
+                    <h4>ひきとおし</h4>
+                    <p>長崎県の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/okayama1.jpg" alt="" /></figure>
+                <figure><img src="images/nagasaki1.jpg" alt="" /></figure>
                 <div class="text">
-                    <h4>デミかつ丼</h4>
-                    <p>岡山県の郷土料理です．</p>
+                    <h4>ひきとおし</h4>
+                    <p>長崎県の郷土料理です．</p>
                 </div>
               </div>
   
@@ -94,8 +94,8 @@
           </div>
 
           <p class="u">
-            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/41_20_okayama.html">
-              出典:「デミかつ丼 岡山県」(農林水産省)(2023年1月14日に利用)</a><br />
+            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/46_2_nagasaki.html">
+              出典:「ひきとおし 長崎県」(農林水産省)(2023年1月14日に利用)</a><br />
           </p>
 
           <!--/.list-container-->
