--- a/tp_bussan2_bg_green/kyoto.html
+++ b/tp_bussan2_bg_green/kyoto.html
@@ -40,51 +40,51 @@
 
       <main>
         <section>
-          <h2 class="flag">鳥取県<span>Recipe</span></h2>
-          <h2>いただき</h2>
+          <h2 class="flag">京都府<span>Recipe</span></h2>
+          <h2>肉豆腐</h2>
 
           <p class="dai">
-            材料（4人前）<br />
+            材料（3人分）<br />
           </p>
           <p class="c">
-            米　2合<br />三角の油揚げ（大）　4枚<br />人参　50g<br />ごぼう　50g<br />
-            干ししいたけ　3枚<br />Aしいたけの戻し汁　800ml<br />A醤油　大さじ4<br />A砂糖　大さじ2<br />A酒　大さじ1<br />
+            牛薄切り肉(すき焼き用)　200g<br />木綿豆腐　160g<br />九条ネギ　1束<br />だし汁　500cc<br />
+            酒　大さじ1<br />砂糖　大さじ2/3<br />醤油　大さじ2<br />みりん　小さじ1<br />塩　適量<br />一味唐辛子(お好みで）<br />
           </p>
           <p class="dai">
             作り方<br />
           </p>
           <p class="c">
-            （１）	三角の油揚げに切れ込みを入れ袋にする。<br />
-            （２）	ごぼうはささがきにして水にはなし、アク抜きをする。人参は細切りにする。干ししいたけは浸けてもどし、細かく切る。<br />
-            （３）	（２）と米を混ぜ合わせ、油揚げに詰めて、爪楊枝で口を縫うようにして留める。<br />
-            （４）	炊飯器に（３）、Aを入れて炊き上げる。<br />
-            （５）	爪楊枝を外して完成。<br />
+            （１）	ねぎ、豆腐を食べやすい大きさに切っておく。<br />
+            （２）	牛肉は湯通ししざるにあげて水気を切っておく。<br />
+            （３）	鍋にだし汁を入れ煮立たせ、酒、砂糖、牛肉、豆腐を加え、中火で2～3分ほど煮る。<br />
+            （４）  醤油、みりんを加えて落し蓋をし、弱火で10分ほど煮こむ。<br />
+            （５）  仕上げに九条ねぎを加えて軽く火を通し、塩で味をととのえる。<br />
             </a>
           </p>
 
           <div class="list-container">
             
             <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/kyoto1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                  <h4>肉豆腐</h4>
+                  <p>京都府の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/kyoto1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                    <h4>肉豆腐</h4>
+                    <p>京都府の郷土料理です．</p>
                 </div>
               </div>
   
               <div class="list-square blur">
-                <figure><img src="images/tottori1.jpg" alt="" /></figure>
+                <figure><img src="images/kyoto1.jpg" alt="" /></figure>
                 <div class="text">
-                  <h4>いただき</h4>
-                  <p>鳥取県の郷土料理です．</p>
+                    <h4>肉豆腐</h4>
+                    <p>京都府の郷土料理です．</p>
                 </div>
               </div>
   
@@ -92,8 +92,8 @@
           </div>
 
           <p class="u">
-            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/itadaki_tottori.html">
-              出典:「いただき 鳥取県」(農林水産省)(2023年1月14日に利用)</a><br />
+            <a href="https://www.maff.go.jp/j/keikaku/syokubunka/k_ryouri/search_menu/menu/nikudofu_kyoto.html">
+              出典:「肉豆腐　京都府」(農林水産省)(2023年1月15日に利用)</a><br />
           </p>
 
           <!--/.list-container-->
