--- a/tp_bussan2_bg_green/index.html
+++ b/tp_bussan2_bg_green/index.html
@@ -124,10 +124,10 @@
 	<a href="tottori.html" target="_blank">鳥取</a>
 	</td>
 	<td bgcolor="#bf88fe" width="26" rowspan="2">
-	<a href="http://web.pref.hyogo.jp/" target="_blank">兵庫</a>
+	<a href="hyogo.html" target="_blank">兵庫</a>
 	</td>
 	<td bgcolor="#9f88fe" width="30">
-	<a href="http://www.pref.kyoto.jp/" target="_blank">京都</a>
+	<a href="kyoto.html" target="_blank">京都</a>
 	</td>
 	<td bgcolor="#9f88fe" width="26">
 	<a href="shiga.html" target="_blank">滋賀</a>
@@ -166,10 +166,10 @@
 	<a href="http://www.pref.okayama.jp/" target="_blank">岡山</a>
 	</td>
 	<td bgcolor="#bf88fe">
-	<a href="http://www.pref.osaka.jp/" target="_blank">大阪</a>
+	<a href="osaka.html" target="_blank">大阪</a>
 	</td>
 	<td bgcolor="#9f88fe">
-	<a href="http://www.pref.nara.jp/" target="_blank">奈良</a>
+	<a href="nara.html" target="_blank">奈良</a>
 	</td>
 	<td bgcolor="#9f88fe">
 	<a href="http://www.pref.gifu.lg.jp/" target="_blank">岐阜</a>
@@ -195,10 +195,10 @@
 	</td>
 	<td></td><td></td><td></td><td></td><td></td>
 	<td bgcolor="#bf88fe">
-	<a href="http://www.pref.wakayama.lg.jp/" target="_blank">和歌山</a>
+	<a href="wakayama.html" target="_blank">和歌山</a>
 	</td>
 	<td bgcolor="#bf88fe">
-	<a href="http://www.pref.mie.jp/" target="_blank">三重</a>
+	<a href="mie.html" target="_blank">三重</a>
 	</td>
 	<td bgcolor="#9f88fe">
 	<a href="http://www.pref.aichi.jp/" target="_blank">愛知</a>
